Fixed navbar overflow in small screens

--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ img{
     min-width: 0;            
     text-overflow: ellipsis; 
     white-space: nowrap;     
-    
+    overflow: hidden;     
 }
 
 .nav-bar .logo {
